Fixed modid for ApiLookupLib + Set up launch settings to handle more projects

--- a/ApiLookupLib/ApiLookupLib.csproj
+++ b/ApiLookupLib/ApiLookupLib.csproj
@@ -29,5 +29,8 @@
             <Private>false</Private>
         </Reference>
     </ItemGroup>
-
+    
+    <Target Name="CopyAfterBuild" AfterTargets="AfterBuild">
+        <Copy SourceFiles="$(OutputPath)/$(AssemblyName).dll" DestinationFolder="$(SolutionDir)/Mods"/>
+    </Target>
 </Project>
